# lib-artnet-4-cpp

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
artnet/: ArtNetController.cpp  ArtNetController.cpp_2  ArtNetController.cpp_4  ArtNetController.h  CMakeLists.txt  NetworkInterface.h  artnet_types.h  artnet_types.h_3  logging.h  network_interface_bsd.cpp  network_interface_bsd.cpp_2  network_interface_bsd.h  network_interface_bsd.h_2  network_interface_linux.cpp  network_interface_linux.cpp_2  network_interface_linux.h  network_interface_linux.h_2  utils.cpp  utils.h
artnet/example/: ArtNetExample.cpp  CMakeLists.txt
utils/: print_code.sh
